internal class AnimationStrings
{
  internal static string IsMoving = "isMoving";
  internal static string IsRunning = "isRunning";
  internal static string IsGrounded = "isGrounded";
  internal static string YVelocity = "yVelocity";
  internal static string IsOnWall = "isOnWall";
  internal static string IsOnCeiling = "isOnCeiling";
  internal static string Jump = "jump";
  internal static string Attack = "attack";
  internal static string CanMove = "canMove";
  internal static string IsAlive = "isAlive";
  internal static string Hurt = "hurt";
}